data/derived/comb/progs/unify/prog5033.ml.out
Characters 256-291:
  let (_, res) = List.fold_left f base [(1,2);(2,2)] in
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type 'a * 'b
